# soynut

./: .gitignore  .gitmodules  CLAUDE.md  DEVIATIONS.md  README.md  pyproject.toml  requirements-dev.txt
Arduino NHD14432/NHD14432_DisplayBridge/: CLAUDE.md  NHD14432_DisplayBridge.ino  convert_images.py  hp41_display_tables_avr.h
Arduino NHD14432/NHD14432_POC/: CLAUDE.md  NHD14432_POC.ino  bitmaps.h
firmware/: CMakeLists.txt  bitmaps.c  bitmaps.h  hp41_arduino_bridge.c  hp41_arduino_bridge.h  hp41_display_bridge.c  hp41_display_bridge.h  hp41_elite_display_bridge.c  hp41_elite_display_bridge.h  hp41_key_bridge.c  hp41_key_bridge.h  hp41_key_hold_bridge.c  hp41_key_hold_bridge.h  hp41_persist_flash.c  hp41_persist_flash.h  hp41_persist_state.c  hp41_persist_state.h  main.c  pins.h  st7920.c  st7920.h
firmware/emu41gcc_compat/: dos.h  mem.h  nut_globals.c  nut_rom.c  nut_rom.h  nut_stubs.c  nut_stubs.h
font-tables/: gen_display_tables.py  gen_elite_font_table.py  hp41_annunciator_pixel_map.json  hp41_display_tables.c  hp41_display_tables.h  hp41_elite_font_table.c  hp41_elite_font_table.h  hp41_elite_font_table.json  hp41_font_table.json  hp41_font_table.txt  hp41_pixel_segment_map.json
lcd_bringup/: CMakeLists.txt  main.c  pins.h  st7920.c  st7920.h
roms/: README.md  check_rom_format.py  rom_to_c.py
sim/: Makefile  README.md  run_with_gui.sh  sim_clock.c  sim_clock.h  sim_display.c  sim_display.h  sim_keyboard.c  sim_keyboard.h  sim_main.c  sim_persist_file.c  sim_persist_file.h  sim_pty.c  sim_pty.h
tests/: Makefile  display_bridge_test.c  elite_display_bridge_test.c  hold_trace_test.c  key_bridge_test.c  key_hold_test.c  nut_smoke_test.c  persist_state_test.c
tools/: Makefile  desas_proto.h  hp41_keyboard_gui.py  nut_disasm.c  powoff_trace.c
